--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -12,3 +12,35 @@
     opacity: 1;
   }
 }
+
+.home-blurb-hole {
+  animation: fadeInBlurb ease-in-out 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-delay: 4s;
+}
+
+@keyframes fadeInBlurb {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.home-portrait-hole {
+  animation-delay: 2s;
+  animation: fadeInPortrait ease-in-out 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInPortrait {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
