--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -14,10 +14,11 @@
 }
 
 .home-blurb-hole {
+  opacity: 0;
   animation: fadeInBlurb ease-in-out 2s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  animation-delay: 4s;
+  animation-delay: 2s;
 }
 
 @keyframes fadeInBlurb {
@@ -30,7 +31,8 @@
 }
 
 .home-portrait-hole {
-  animation-delay: 2s;
+  opacity: 0;
+  animation-delay: 8s;
   animation: fadeInPortrait ease-in-out 2s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
