--- a/src/utils/Blurb.css
+++ b/src/utils/Blurb.css
@@ -5,3 +5,21 @@
 .Blurb::-webkit-scrollbar-track{
     width: 5px;
 }
+
+.Blurb {
+    opacity: 0;
+    animation: fadeInBlurb ease-in-out 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-delay: 2s;
+    text-wrap: balance;
+  }
+  
+  @keyframes fadeInBlurb {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
