--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -13,36 +13,18 @@
   }
 }
 
-.home-blurb-hole {
-  opacity: 0;
-  animation: fadeInBlurb ease-in-out 2s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-delay: 2s;
+.animated-line {
+  stroke-dasharray: 100;
+  stroke-dashoffset: 100;
+  stroke-linecap:round;
+  animation: dashIn 10s ease-in-out infinite;
 }
 
-@keyframes fadeInBlurb {
-  0% {
-    opacity: 0;
+@keyframes dashIn {
+  50% {
+    stroke-dashoffset: 0;
   }
   100% {
-    opacity: 1;
-  }
-}
-
-.home-portrait-hole {
-  opacity: 0;
-  animation-delay: 8s;
-  animation: fadeInPortrait ease-in-out 2s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-}
-
-@keyframes fadeInPortrait {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
+    stroke-dashoffset: -100;
   }
 }
