--- a/src/utils/Portrait.css
+++ b/src/utils/Portrait.css
@@ -14,3 +14,14 @@
       opacity: 1;
     }
   }
+
+.Portrait img {
+    filter:saturate(4)
+}
+
+.Portrait img:hover {
+    filter:saturate(0);
+    cursor: pointer;
+    transition-duration: 1s;
+    transition-timing-function:ease-in-out ;
+}
