--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,15 +1,24 @@
 .Projects {
   perspective: 1000px;
-  animation: fadeIn ease-in-out 2s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
 }
 
-@keyframes fadeIn {
+.carousel-bounce {
+  animation: enterBottom ease-out 1.25s;
+  animation-iteration-count: 1;
+  animation-fill-mode: inherit;
+}
+
+@keyframes enterBottom {
   0% {
-    opacity: 0;
+    transform: translateY(1500px);
+  }
+  80% {
+    transform: translateY(-30px);
+  }
+  92% {
+    transform: translateY(15px);
   }
   100% {
-    opacity: 1;
+    transform: translateY(0px);
   }
 }
