added logic to track front facing cards and the range of cards from front (logic is not yet working fully as intended, but functional on load and in small uses) - this is allowing for dynamic application of overlay transparencies on carousel faces to imply a lighting source

--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -3,7 +3,7 @@
 }
 
 .carousel-bounce {
-  animation: enterBottom ease-out 1.25s;
+  animation: enterBottom ease-in-out 1.5s;
   animation-iteration-count: 1;
   animation-fill-mode: inherit;
 }
