broke out ContactCard into its own component to allow for more responsive styling without breaking the Carousel, added media queries to DDDCarouCell to allow for different scales at different screen heights

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -13,6 +13,10 @@
   }
 }
 
+.Contact .card-wrapper:hover {
+  transform: scale(1.4)
+}
+
 .Contact .card-wrapper .card-image-div img {
   filter:grayscale(1)
 }
