--- a/src/utils/DDDCarouCell.css
+++ b/src/utils/DDDCarouCell.css
@@ -1,9 +1,33 @@
 .rv0 .card-wrapper:hover {
-    transform: scale(1.4)
+  transform: scale(1.4);
 }
 
+@media (max-height: 1100px) {
+  .rv0 .card-wrapper:hover {
+    transform: scale(1.3);
+  }
+}
+
+@media (max-height: 900px) {
+  .rv0 .card-wrapper:hover {
+    transform: scale(1.1);
+  }
+}
+
+@media (max-height: 800px) {
+    .rv0 .card-wrapper:hover {
+      transform: scale(1.05);
+    }
+  }
+
+  @media (max-height: 700px) {
+    .rv0 .card-wrapper:hover {
+      transform: none;
+    }
+  }
+
 .rv0 .card-wrapper .shader {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 .rv0 .card-wrapper .select-glow {
