transferred all javascript-controlled navbar animations to be CSS only, increasing smooth performance, added keys to button array components in Card and ContactCard

--- a/src/utils/Navbar.css
+++ b/src/utils/Navbar.css
@@ -1,14 +1,22 @@
 .Navbar {
-    animation: fadeIn ease-in-out 2s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+  animation: fadeIn ease-in-out 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
   }
-  
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+  100% {
+    opacity: 1;
   }
+}
+
+.Navbar .nav-text {
+  visibility: hidden;
+}
+
+.Navbar:hover .nav-text {
+  visibility: visible;
+}
