adjusted styling on Projects and Carousel components, specifically sizing at 768 and button positioning at different breakpoints, to make the site more responsive

--- a/src/utils/DDDCarouCell.css
+++ b/src/utils/DDDCarouCell.css
@@ -20,9 +20,9 @@
     }
   }
 
-  @media (max-height: 700px) {
+  @media (max-height: 768px) {
     .rv0 .card-wrapper:hover {
-      transform: none;
+      transform: scale(1.5);
     }
   }
 
