updated resume and autoformatted all components for better readability

--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,16 @@
 @tailwind utilities;
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #583388;
-    font-family: 'Raleway', sans-serif;
+  background-color: #583388;
+  font-family: "Raleway", sans-serif;
 }
 
-h1, h2, h3 {
-    font-family: 'Bitter', serif;
+h1,
+h2,
+h3 {
+  font-family: "Bitter", serif;
 }
