--- a/src/utils/NavIcon.css
+++ b/src/utils/NavIcon.css
@@ -1,8 +1,8 @@
 .icon-hole:hover .faIcon {
-    transform: translateY(-.375em);
-  }
+  transform: translateY(-0.375em);
+}
 
 button:focus .nav-text {
-    visibility: visible;
-    color: rgb(203 213 225)
+  visibility: visible;
+  color: rgb(203 213 225);
 }
