adjusted scaling in Contact.css to have a 768 breakpoint and scale smaller below

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -17,6 +17,12 @@
   transform: scale(1.4);
 }
 
+@media (max-width: 768px) {
+  .Contact .card-wrapper:hover {
+    transform: scale(1.2);
+  }
+}
+
 .Contact .card-wrapper .card-image-div img {
   filter: grayscale(1);
 }
